pihole.egress.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pihole
  name: pihole-service
  namespace: pihole
  annotations:
    metallb.universe.tf/loadBalancerIPs: 10.0.0.230  
spec:
  selector:
    app: pihole
  ports:
  - name: pihole-tcp-dns
    targetPort: 53
    port: 53
    protocol: TCP
  - name: pihole-http
    port: 80
    protocol: TCP
    targetPort: 80 #Container port
  - name: pihole-udp-dns
    port: 67
    protocol: UDP
    targetPort: 67
  - name: pihole-ssl
    port: 443
    targetPort: 443
    protocol: TCP
  type: LoadBalancer
